--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,6 +8,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+defaults:
+  run:
+    working-directory: ./ThreatCheck
 
 jobs:
   build:
@@ -30,4 +34,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: ThreatCheck.exe
-        path: D:\a\ThreatCheck\ThreatCheck\ThreatCheck\bin\Release\ThreatCheck.exe
+        path: D:\a\ThreatCheck\ThreatCheck\bin\Release\ThreatCheck.exe
