--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,7 +11,7 @@ on:
     
 defaults:
   run:
-    working-directory: ./ThreatCheck
+    working-directory: ./ThreatCheck/ThreatCheck
 
 jobs:
   build:
