--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,4 +36,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: ThreatCheck.exe
-        path: D:\a\ThreatCheck\ThreatCheck\ThreatCheck\bin\Release\ThreatCheck.exe
+        path:  D:\a\ThreatCheck\ThreatCheck\ThreatCheck\ThreatCheck\bin\Release\ThreatCheck.exe
